Aula 01: Adiciona Arquivo CSS

--- a/fundamentos-desenvolvimento-frontend/html-project/index.html
+++ b/fundamentos-desenvolvimento-frontend/html-project/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pós Unesc</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
-  <body></body>
+  <body>
+    <h1>Exemplo de HTML</h1>
+    <div>
+      <ul>
+        <li>Primeiro</li>
+        <li>Segundo</li>
+        <li>Terceiro</li>
+        <li>Quarto</li>
+        <li>Quinto</li>
+      </ul>
+    </div>
+  </body>
 </html>
