Aula 01: Adiciona parágrafos e estilos.

--- a/fundamentos-desenvolvimento-frontend/html-project/index.html
+++ b/fundamentos-desenvolvimento-frontend/html-project/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pós Unesc</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <h1>Exemplo de HTML</h1>
-    <div>
+    <div class="destaque">
       <ul>
         <li>Primeiro</li>
         <li>Segundo</li>
@@ -18,5 +18,15 @@
         <li>Quinto</li>
       </ul>
     </div>
+    <div>
+      <p id="#artigos">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt
+        ex ac odio eleifend, quis congue arcu faucibus. Praesent eu varius massa.
+        Pellentesque porttitor fermentum accumsan. Proin augue lacus, lobortis
+        dapibus sapien eu, tempor interdum nulla. Curabitur porta orci erat, ut
+        dictum ante malesuada ut. Etiam imperdiet leo et magna.
+      </p>  
+    </div>
+  
   </body>
 </html>
