Aula 01: Inicia o Portifólio

--- a/fundamentos-desenvolvimento-frontend/html-project/index.html
+++ b/fundamentos-desenvolvimento-frontend/html-project/index.html
@@ -3,30 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pós Unesc</title>
+    <title>Portifólio</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <h1>Exemplo de HTML</h1>
-    <div class="destaque">
-      <ul>
-        <li>Primeiro</li>
-        <li>Segundo</li>
-        <li>Terceiro</li>
-        <li>Quarto</li>
-        <li>Quinto</li>
-      </ul>
-    </div>
-    <div>
-      <p id="#artigos">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt
-        ex ac odio eleifend, quis congue arcu faucibus. Praesent eu varius massa.
-        Pellentesque porttitor fermentum accumsan. Proin augue lacus, lobortis
-        dapibus sapien eu, tempor interdum nulla. Curabitur porta orci erat, ut
-        dictum ante malesuada ut. Etiam imperdiet leo et magna.
-      </p>  
-    </div>
-  
+    <header>
+      <div>
+        <img src="https://media.licdn.com/dms/image/D4D03AQEiATFBnneuFQ/profile-displayphoto-shrink_200_200/0/1672960202278?e=1706745600&v=beta&t=vmmtHkJrxMK2DW6kIgHujXgORukmOBAqSEWfBnydy8U" alt="Foto do perfil">
+      </div>
+      <div>
+        <h1>Otávio Borges</h1>
+        <p>Programador Web Full Stack na UnaTi - Grails | Spring | Vue</p>
+      </div>
+    </header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
