Aula 01: Adiciona Tecnologias.

--- a/fundamentos-desenvolvimento-frontend/html-project/index.html
+++ b/fundamentos-desenvolvimento-frontend/html-project/index.html
@@ -17,7 +17,16 @@
         <p>Programador Web Full Stack na UnaTi - Grails | Spring | Vue</p>
       </div>
     </header>
-    <main></main>
+    <main>
+      <article>
+        <h2>Tecnologias</h2>
+        <div class="lista-tecnologias">
+          <img src="img/html-5.png" alt="HTML 5">
+          <img src="img/css-3.png" alt="CSS 3">
+          <img src="img/javascript-3.png" alt="JavaScript">
+        </div>
+      </article>
+    </main>
     <footer></footer>
   </body>
 </html>
