Aula 01: Adiciona Footer.

--- a/fundamentos-desenvolvimento-frontend/html-project/index.html
+++ b/fundamentos-desenvolvimento-frontend/html-project/index.html
@@ -10,11 +10,30 @@
   <body>
     <header>
       <div>
-        <img src="https://media.licdn.com/dms/image/D4D03AQEiATFBnneuFQ/profile-displayphoto-shrink_200_200/0/1672960202278?e=1706745600&v=beta&t=vmmtHkJrxMK2DW6kIgHujXgORukmOBAqSEWfBnydy8U" alt="Foto do perfil">
+        <img
+          src="https://media.licdn.com/dms/image/D4D03AQEiATFBnneuFQ/profile-displayphoto-shrink_200_200/0/1672960202278?e=1706745600&v=beta&t=vmmtHkJrxMK2DW6kIgHujXgORukmOBAqSEWfBnydy8U"
+          alt="Foto do perfil">
       </div>
       <div>
         <h1>Otávio Borges</h1>
-        <p>Programador Web Full Stack na UnaTi - Grails | Spring | Vue</p>
+        <p>Programador Web Fullstack desde abril de 2022, quando realizei a transição de carreira do ramo de atacados para a
+          área da tecnologia. Atualmente, trabalhando com as seguintes ferramentas: Grails, Spring Boot, Azure e Vue.js.</p>
+    
+        <p>Formado em Análise e Desenvolvimento de Sistemas pela ULBRA Torres desde dezembro de 2022, iniciei a
+          Pós-Graduação em Desenvolvimento Fullstack de Sistemas Modernos para Nuvem na Universidade do Extremo Sul
+          Catarinense em agosto de 2023. Neste curso, estudo tecnologias e conceitos atuais do mercado, como:</p>
+    
+        <ul>
+          <li>React com TypeScript;</li>
+          <li>Next.js;</li>
+          <li>Node com Nest;</li>
+          <li>Microsserviços;</li>
+          <li>RabbitMQ;</li>
+          <li>Banco de Dados NoSQL;</li>
+          <li>Desenvolvimento Ágil.</li>
+        </ul>
+        <p>Busco sempre a evolução do conhecimento, seja por meio acadêmico ou pelos cursos disponíveis em plataformas
+          online.</p>
       </div>
     </header>
     <main>
@@ -27,6 +46,15 @@
         </div>
       </article>
     </main>
-    <footer></footer>
+    <footer>
+      <div>
+        <h3>Otávio Borges</h3>
+        <p>Programador Web Full Stack na UnaTi - Grails | Spring | Vue</p>
+      </div>
+      <div id="redes">
+        <a href="https://www.instagram.com/otavioborgsm/" target="_blank" rel="noopener noreferrer">Instagram</a>
+        <a href="https://www.linkedin.com/in/otavioborgsm/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+      </div>
+    </footer>
   </body>
 </html>
