Aula 01: Adiciona botões e comportamentos.

--- a/fundamentos-desenvolvimento-frontend/html-project/index.html
+++ b/fundamentos-desenvolvimento-frontend/html-project/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portifólio</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="app.js"></script>
   </head>
 
   <body>
@@ -38,6 +39,8 @@
     </header>
     <main>
       <article>
+        <button id="btnExecutar" type="button">Executar</button>
+        <button id="btnRemover" type="button">Remover</button>
         <h2>Tecnologias</h2>
         <div class="lista-tecnologias">
           <img src="img/html-5.png" alt="HTML 5">
