--- a/fundamentos-desenvolvimento-frontend/bootstrap-project/index.html
+++ b/fundamentos-desenvolvimento-frontend/bootstrap-project/index.html
@@ -43,6 +43,42 @@
     </div>
   </nav>
 
+  <main class="container-fluid">
+    <div class="row">
+      <div class="col-md-6">
+        <img
+          src="https://media.licdn.com/dms/image/D4D03AQEiATFBnneuFQ/profile-displayphoto-shrink_200_200/0/1672960202278?e=1706745600&v=beta&t=vmmtHkJrxMK2DW6kIgHujXgORukmOBAqSEWfBnydy8U"
+          alt="Foto do perfil" class="img-fluid mx-auto d-block my-4 img-thumbnail">
+        <h1>Otávio Borges</h1>
+        <p>Programador Web Fullstack desde abril de 2022, quando realizei a transição de carreira do ramo de atacados para
+          a
+          área da tecnologia. Atualmente, trabalhando com as seguintes ferramentas: Grails, Spring Boot, Azure e Vue.js.
+        </p>
+  
+        <p>Formado em Análise e Desenvolvimento de Sistemas pela ULBRA Torres desde dezembro de 2022, iniciei a
+          Pós-Graduação em Desenvolvimento Fullstack de Sistemas Modernos para Nuvem na Universidade do Extremo Sul
+          Catarinense em agosto de 2023. Neste curso, estudo tecnologias e conceitos atuais do mercado, como:</p>
+  
+        <ul>
+          <li>React com TypeScript;</li>
+          <li>Next.js;</li>
+          <li>Node com Nest;</li>
+          <li>Microsserviços;</li>
+          <li>RabbitMQ;</li>
+          <li>Banco de Dados NoSQL;</li>
+          <li>Desenvolvimento Ágil.</li>
+        </ul>
+        <p>Busco sempre a evolução do conhecimento, seja por meio acadêmico ou pelos cursos disponíveis em plataformas
+          online.</p>
+          
+        <div class="text-end">
+          <a class="btn btn-outline-primary" href="https://www.linkedin.com/in/otavioborgsm/" target="_blank" rel="noopener noreferrer">Meu Perfil</a>
+        </div>
+      </div>
+      <div class="col-md-6"></div>
+    </div>
+  </main>
+
   <!-- Bootstrap JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
