Aula 02: Adiciona botões de redes sociais.

--- a/fundamentos-desenvolvimento-frontend/bootstrap-project/index.html
+++ b/fundamentos-desenvolvimento-frontend/bootstrap-project/index.html
@@ -73,7 +73,18 @@
           online.</p>
           
         <div class="text-end">
-          <a class="btn btn-outline-primary" href="https://www.linkedin.com/in/otavioborgsm/" target="_blank" rel="noopener noreferrer">Meu Perfil</a>
+          <a class="btn btn-outline-primary" href="https://www.linkedin.com/in/otavioborgsm/" target="_blank"
+            rel="noopener noreferrer">
+            <i class="h3 bi-linkedin"></i>
+          </a>
+          <a class="btn btn-outline-primary" href="https://www.instagram.com/otavioborgsm/" target="_blank"
+            rel="noopener noreferrer">
+            <i class="h3 bi-instagram"></i>
+          </a>
+          <a class="btn btn-outline-primary" href="https://www.facebook.com/otavioborgsm/" target="_blank"
+            rel="noopener noreferrer">
+            <i class="h3 bi-facebook"></i>
+          </a>
         </div>
       </div>
       <div class="col-md-6"></div>
