Aula 03: Adiciona form na Página com Bootstrap.

--- a/fundamentos-desenvolvimento-frontend/bootstrap-project/index.html
+++ b/fundamentos-desenvolvimento-frontend/bootstrap-project/index.html
@@ -87,7 +87,32 @@
           </a>
         </div>
       </div>
-      <div class="col-md-6"></div>
+      <div class="col-md-6">
+        <div class="container-fluid h-100">
+          <div class="row h-100 d-flex align-items-center">
+            <div class="col-md-6 pt-4 mx-auto">
+              <form action="#" method="post">
+                <div class="mb-3">
+                  <label for="nome" class="form-label">Nome: </label>
+                  <input type="text" class="form-control" name="name">
+                </div>
+                <div class="mb-3">
+                  <label for="email" class="form-label">E-mail: </label>
+                  <input type="email" class="form-control" name="email">
+                </div>
+                <div class="mb-3">
+                  <label for="celular" class="form-label">Celular: </label>
+                  <input type="text" class="form-control" name="celular">
+                </div>
+                <div class="text-end">
+                  <button class="btn btn-primary">Enviar</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      
+      </div>
     </div>
   </main>
 
