--- a/fundamentos-desenvolvimento-frontend/bootstrap-project/index.html
+++ b/fundamentos-desenvolvimento-frontend/bootstrap-project/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+  <script src="app.js"></script>
 </head>
 
 <body>
@@ -91,18 +92,27 @@
         <div class="container-fluid h-100">
           <div class="row h-100 d-flex align-items-center">
             <div class="col-md-6 pt-4 mx-auto">
-              <form action="#" method="post">
+              <form id="formCadastroUsuario" method="post" novalidate>
                 <div class="mb-3">
                   <label for="nome" class="form-label">Nome: </label>
-                  <input type="text" class="form-control" name="name">
+                  <input required minlength="6" type="text" class="form-control" name="name">
+                  <div class="invalid-feedback">
+                    Nome é obrigatório e deve conter no mínimo 6 caracteres.
+                  </div>
                 </div>
                 <div class="mb-3">
                   <label for="email" class="form-label">E-mail: </label>
-                  <input type="email" class="form-control" name="email">
+                  <input required type="email" class="form-control" name="email">
+                  <div class="invalid-feedback">
+                    E-mail é obrigatório.
+                  </div>
                 </div>
                 <div class="mb-3">
                   <label for="celular" class="form-label">Celular: </label>
-                  <input type="text" class="form-control" name="celular">
+                  <input required pattern="[0-9]{11}" type="text" class="form-control" name="celular">
+                  <div class="invalid-feedback">
+                    Digite o telefone com o DDD e o número sem formatação. Ex: 51999991234
+                  </div>
                 </div>
                 <div class="text-end">
                   <button class="btn btn-primary">Enviar</button>
